# QuoteGeneration

./: .gitignore  CMakeLists.txt  QuoteGeneration.iss  animatedbutton.cpp  animatedbutton.h  animationbutton.cpp  appsettings.cpp  appsettings.h  basissection.cpp  basissection.h  clarificationssection.cpp  clarificationssection.h  configdialog.cpp  configdialog.h  database.cpp  database.h  dropdownmanagerdialog.cpp  dropdownmanagerdialog.h  editoptiondialog.cpp  editoptiondialog.h  emaildialog.cpp  emaildialog.h  exclusionssection.cpp  exclusionssection.h  generalconditionssection.cpp  generalconditionssection.h  licencedialog.cpp  licencedialog.h  licencemanager.cpp  licencemanager.h  main.cpp  mainwindow.cpp  mainwindow.h  pricesection.cpp  pricesection.h  quotelistdialog.cpp  quotelistdialog.h  quotepdfgenerator.cpp  quotepdfgenerator.h  quotepreviewdialog.cpp  (+13 more)
deploy/: QuoteGeneration.ini  QuoteGeneration.sqlite
resources/Help File/: (Autosaved) Quote Generation Help File.gui
resources/Specification/: Inclusion_Exclusion Lists.docx  Quote Generation Spec.docx  Quote Generation Specification.docx
resources/Testing Quotes/: Rochedale apartments stage 1.docx  ~$chedale apartments stage 1.docx
resources/choices/: Conditions Of Quote Choices
resources/logos/: PBLogo_03.xcf
